# voicer

./: README.md  build.gradle  gradlew  settings.gradle
FFmpegAndroid/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/raserad/voicer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioManager.cpp  AudioManager.h  native-lib.cpp
app/src/main/java/com/raserad/voicer/: App.kt  AppActivity.kt
app/src/main/java/com/raserad/voicer/di/: AppDI.kt  InteractorDI.kt  PresenterDI.kt  RepositoryDI.kt  RouterDI.kt
app/src/main/res/anim/: fade_in.xml  fade_out.xml  slide_down.xml  slide_left.xml  slide_right.xml  slide_up.xml  stay.xml
app/src/main/res/drawable/: background_dark_rounded.xml  ic_launcher_background.xml  splash_screen.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_need_audio_record_permission.xml  dialog_need_files_permission.xml  dialog_project_create.xml  dialog_project_create_progress.xml  fragment_project_create.xml  fragment_project_editor.xml  fragment_project_list.xml  fragment_video_select.xml  view_project_item.xml  view_sound_track_item.xml  view_video_item.xml  view_video_trimmer.xml
app/src/main/res/layout-land/: fragment_project_create.xml  fragment_project_editor.xml  fragment_video_select.xml  view_project_item.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/raserad/voicer/: ExampleUnitTest.kt
videoutils/: build.gradle
(+123 files in other folders)
